# data-radar-public

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pdAutoRead.py  pyproject.toml
data/: purpose.txt  radar_data_cdm.csv  radar_data_colours.csv  radar_data_domains.csv
src/: app.py  callbacks.py  config.py  data.py  helpers.py  layout.py
src/assets/: base.css
