[tool.poetry]
name = "data-radar"
version = "0.1.0"
description = ""
authors = ["Jim O'Connell <james.oconnell@digital.cabinet-office.gov.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
dash = "^2.17.1"
plotly = "^5.24.0"
dash-bootstrap-components = "^1.3.0"
openpyxl = "^3.1.2"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
